--- a/index.html
+++ b/index.html
@@ -1,15 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<title>user login</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body, html {
+  height: 100%;
+}
+
+.image1 {
+  background-image: url("https://cdn.pixabay.com/photo/2017/04/08/10/42/burj-khalifa-2212978_1280.jpg");
+  height: 100%; 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.image2 {
+  background-image: url("https://media.istockphoto.com/id/1473721382/photo/dubai-city-skyline-uae.webp?b=1&s=170667a&w=0&k=20&c=xdYNfSLMbip2dDiFgWm4f7m8OwoCV-PrNcO1gN0SvEU=");
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.image3{
+  background-image: url("https://media.istockphoto.com/id/1174020523/photo/morning-dubai.webp?b=1&s=170667a&w=0&k=20&c=XncPXcuoJzm76DM38syGZ2woN0EPE_GK4Jaw2AKytKs=");
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+</style>
 </head>
-<body align="center">
-<h1 style="color: rgb(255, 127, 127);font-size:400%;text-align: center;">User login</h1>
-<form action="/action_page.php"autocomplete="on">
-    <label for="'email">User name:</label>
-    <input type="email"id="email"name="email"><br><br>
-    <label for="password">password</label>
-    <input type="password"id="password" name="password"><br><br>
-    <input type="submit">
-</form>
+<body>
+
+
+
+<div class="image1"></div>
+
+<div style="height:1000px;background-color:rgb(0, 225, 255);font-size:36px">
+IT'S LOOK SO GORGEOUS
+</div>
+
+<div class="image2"></div>
+<div style="height:1000px;background-color:rgb(0, 225, 255);font-size:36px">
+    IT'S LOOK SO GORGEOUS
+    </div>
+<div class="image3"></div>
+
 </body>
+</html>
